Closed Bug 769537 Opened 13 years ago Closed 13 years ago

Actually use QuotaExceededError for database creation

Categories

(Core :: Storage: IndexedDB, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: khuey, Assigned: khuey)

References

Details

Attachments

(1 file)

Maxime pointed out that if the quota is exceeded during database creation, an UnknownError is returned.
Comment on attachment 637780 [details] [diff] [review] Patch Review of attachment 637780 [details] [diff] [review]: ----------------------------------------------------------------- Ben says r=bent, but we should figure out a way to test this some day, not now.
Attachment #637780 - Flags: review?(jonas) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
Flags: in-testsuite+ → in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: