Bug 769537: Actually use QuotaExceededError for database creation. r=bent